--- a/flowpad/Views/FirstRunDialog.xaml
+++ b/flowpad/Views/FirstRunDialog.xaml
@@ -12,7 +12,7 @@
         <DataTemplate x:DataType="x:String">
             <StackPanel Orientation="Horizontal">
                 <Image Source="ms-appx:///Assets/StoreLogo.png" Width="40" Height="40" />
-                <TextBlock Text="Flowpad Initial release" Margin="{StaticResource SmallLeftMargin}" VerticalAlignment="Center" />
+                <TextBlock Text="Flowpad 4.0" Margin="{StaticResource SmallLeftMargin}" VerticalAlignment="Center" />
             </StackPanel>
         </DataTemplate>
     </ContentDialog.TitleTemplate>
@@ -21,25 +21,14 @@
             <!---   x:Uid="FirstRun_Body"-->
             <TextBlock
              
-                TextWrapping="WrapWholeWords" Text="Want to annotate pictures or just simply draw something?
-Flowpad can do just that and much more.
-Annotate pictures and share them.
-Use tools such as rulers and protractors
-Save ink to continue editing in other apps.
-Save as .png .jpg .jpeg .bmp .gif .tiff .jpegxr .gif with embedded Isf or .Isf format.
-Share ink to email, messenger and other apps...
-Customize the canvas to your preference.
-Advanced color picker.
-And much much more...
-This app has touch, pen and mouse input included.
-Please note: To rotate the ruler use the mouse scroll button.
+                TextWrapping="WrapWholeWords" Text="If you want to submit feedback, get future update progress updates and talk to the developer then go join our discord server
 "/>
            
            
             <HyperlinkButton
-                Content="Privacy Statement"
+                Content="Discord server"
                     Margin="{StaticResource XSmallTopMargin}"
-                    NavigateUri="https://www.websitepolicies.com/policies/view/vINyITTB"/>
+                    NavigateUri="https://discord.gg/3WYcKat"/>
             <!--  x:Uid="Settings_PrivacyTermsLink"-->
         </StackPanel>
     </ScrollViewer>
