--- a/flowpad/App.xaml
+++ b/flowpad/App.xaml
@@ -1,11 +1,11 @@
 ﻿<Application
     x:Class="flowpad.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    >
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:converters="using:flowpad.Converters">
 
     <Application.Resources>
         <ResourceDictionary>
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources  xmlns="using:Microsoft.UI.Xaml.Controls"/>
                 <ResourceDictionary Source="/Styles/_Colors.xaml"/>
@@ -15,6 +15,52 @@
                 <ResourceDictionary Source="/Styles/TextBlock.xaml"/>
                 <ResourceDictionary Source="/Styles/CommandBar.xaml"/>
                 <ResourceDictionary Source="/Styles/Page.xaml"/>
+                <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                    xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
+                                    xmlns:BelowWindows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract, 7)">
+                    <ResourceDictionary.ThemeDictionaries>
+                        <ResourceDictionary x:Key="Dark">
+                            <SolidColorBrush x:Key="24Brush" Color="#242424" />
+                            <SolidColorBrush x:Key="12Brush" Color="#121212" />
+                            <SolidColorBrush x:Key="36Brush" Color="#363636" />
+                            <ResourceDictionary.MergedDictionaries>
+
+                                <ResourceDictionary>
+                                    <Color x:Key="SystemChromeAltMediumHighColor">#CC000000</Color>
+                                    <Color x:Key="SystemChromeAltHighColor">#FF000000</Color>
+                                    <Color x:Key="SystemRevealListLowColor">#FF1D1D1D</Color>
+                                    <Color x:Key="SystemRevealListMediumColor">#FF333333</Color>
+                                    <Color x:Key="RegionColor">#FF000000</Color>
+                                    <SolidColorBrush x:Key="RegionBrush" Color="{StaticResource RegionColor}" />
+                                </ResourceDictionary>
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                        <ResourceDictionary x:Key="Light">
+                            <SolidColorBrush x:Key="12Brush" Color="#ededed" />
+                            <SolidColorBrush x:Key="24Brush" Color="#dbdbdb" />
+                            <SolidColorBrush x:Key="36Brush" Color="#c9c9c9" />
+                            <ResourceDictionary.MergedDictionaries>
+                                <ResourceDictionary>
+                                    <Color x:Key="SystemChromeAltMediumHighColor">#CCFFFFFF</Color>
+                                    <Color x:Key="SystemChromeAltHighColor">#FFFFFFFF</Color>
+                                    <Color x:Key="SystemRevealListLowColor">#FFE6E6E6</Color>
+                                    <Color x:Key="SystemRevealListMediumColor">#FFCCCCCC</Color>
+                                    <RevealBackgroundBrush x:Key="SystemControlHighlightListLowRevealBackgroundBrush"
+                                                           TargetTheme="Light"
+                                                           Color="{ThemeResource SystemRevealListMediumColor}"
+                                                           FallbackColor="{ StaticResource SystemListMediumColor}" />
+                                    <Color x:Key="RegionColor">#FFFFFFFF</Color>
+                                    <SolidColorBrush x:Key="RegionBrush" Color="{StaticResource RegionColor}" />
+                                </ResourceDictionary>
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                        <ResourceDictionary x:Key="HighContrast">
+                            <StaticResource x:Key="RegionColor" ResourceKey="SystemColorWindowColor" />
+                            <SolidColorBrush x:Key="RegionBrush" Color="{StaticResource RegionColor}" />
+                        </ResourceDictionary>
+                    </ResourceDictionary.ThemeDictionaries>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
